feat(release): LNX6.1.83_PL5.1_V1.0.8_20240627-1226
Signed-off-by: dinggao.pan <dinggao.pan@horizon.cc>
Change-Id: I6aecc985d5136738bbb3ee4f6dd75a591901c688

--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -39,13 +39,14 @@
 	gua_audio_rpc_wrapper:audio-rpc-wrapper {
 		compatible = "gua,audio-rpc-wrapper";
 		rpmsg-enable;
-		status = "disabled";
+		status = "okay";
 	};
 
 	ipc_wrapper:ipc-wrapper {
 		compatible = "gua,ipc-wrapper";
 		rpmsg-enable;
-		status = "disabled";
+		status = "okay";
+		gua-ipc = <&ipc_instance0>;
 	};
 
 	sound_misc_0:misc-hifi {
@@ -55,7 +56,7 @@
 										>;
 		msg-wrapper = <&ipc_wrapper>;
 		memory-region = <&adsp_bsp_reserved>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	sound_cpu:cpu-dai {
@@ -63,7 +64,7 @@
 		msg-wrapper = <&ipc_wrapper>;
 		gua,pcm-buffer-size = <0x1E000>;
 		pcm-rpmsg-channel-mapping = <0x00>, <0x00>, <0x00>, <0x00>, <0x00>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	sound-machine {
@@ -71,7 +72,7 @@
 		model = "gua-audio";
 		cpu-dai = <&sound_cpu>;
 		memory-region = <&audio_reserved>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	vdd08_gpu_reg: vdd08_gpu_reg@3 {
@@ -224,6 +225,28 @@
 		goodix,driver-send-cfg = <1>;
 		goodix,int-sync = <1>;
 	};
+
+	lt8618: lt8618@3b{
+		status = "okay";
+		compatible = "lontium,lt8618";
+		reg = <0x3b>;
+		pinctrl-names = "default";
+ 		//LSIO_GPIO1_PIN13
+		pinctrl-0 = <&lsio_gpio1_13>;
+		reset-gpios = <&ls_gpio1_porta 13 GPIO_ACTIVE_LOW>;
+		ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+				hdmi_bridge_in_4k: endpoint {
+					remote-endpoint =
+						<&bt1120_bridge_out>;
+				};
+			};
+		};
+	};
 };
 
 &i2c7 {
@@ -365,19 +388,28 @@
 };
 
 &mailbox0 {
-	status = "disabled";
+	status = "okay";
 };
 
 &ipc_instance0 {
-	status = "disabled";
+	status = "okay";
+	shm-addr = <&adsp_ipc_reserved>;
+	local-offset = <0x0>;
+	remote-offset = <0x400>;
 };
 
 &ipc_instance1 {
-	status = "disabled";
+	status = "okay";
+	shm-addr = <&adsp_ipc_reserved>;
+	local-offset = <0x800>;
+	remote-offset = <0xc00>;
 };
 
 &ipc_instance2 {
-	status = "disabled";
+	status = "okay";
+	shm-addr = <&adsp_ipc_reserved>;
+	local-offset = <0x1000>;
+	remote-offset = <0x4000>;
 };
 
 &pvt {
@@ -385,9 +417,11 @@
 };
 
 &remoteproc_hifi5 {
-	status = "disabled";
+	status = "okay";
 	hifi5-rpmsg-channel-mapping = <0x00>, <0x00>;
 	msg-wrapper = <&ipc_wrapper>;
+	shm-addr = <&adsp_bsp_reserved>;
+	remoteproc-ipc = <&ipc_instance1>;
 };
 
 &hpsclks {
@@ -470,7 +504,7 @@
 &vin_vcon0 {
 	status = "okay";
 	/* camera sensor
-	 * reset gpio:	AON_GPIO0_00:	497
+	 * reset gpio:	AON_GPIO0_00:	498
 	 * pwd gpio:	LSIO_GPIO1_00:	347
 	 */
 	pinctrl-names = "default";
@@ -510,7 +544,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&lsio_gpio1_6>;
 	gpio_oth = <353>;   //reset gpio
-	bus = <5>;  //i2c5
+	bus = <7>;  //i2c7
 	lpwm_chn = <3>; //open lpwm0 - channel3
 };
 
@@ -549,9 +583,16 @@
 
 /*For boards that do not need display module,
 the following ports need to be deleted*/
+
+/*EVB V2 has one bt1120 to hdmi bridge*/
 &bt1120_bridge {
 	ports {
-		/delete-node/ port@1;
+		port@1 {
+			reg = <1>;
+			bt1120_bridge_out: endpoint {
+				remote-endpoint = <&hdmi_bridge_in_4k>;
+			};
+		};
 	};
 };
 
