arm64: dts: hobot: fix [X5-1047] Fix gmac_qos clks bug
Fix gmac_qos clks bug by adding proper clk bindings.

Signed-off-by: Hualun Dong <hualun.dong@horizon.cc>
Change-Id: I5b2874af130cac5e9c92c166637f87ef0942ca8e

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2665,7 +2665,9 @@
 			compatible = "d-robotics,noc_qos";
 			reg = <0x20550100 0x80>;
 			dma-coherent;
-			clocks-num = <0>;
+			clocks-num = <1>;
+			clocks =<&hpsclks X5_HSIO_ENET_AXI_CLK>;
+			clock-names ="enet_axi_clk";
 			status = "okay";
 			ports-num = <1>;
 			ports-off = <0x0008>;
