--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -633,14 +633,14 @@
 
 	pmu: pmu {
 		compatible = "arm,armv8-pmuv3";
-		status = "disabled";
+		status = "okay";
 		interrupt-parent = <&gic>;
 		interrupts = <GIC_PPI 7 IRQ_TYPE_LEVEL_LOW>;
 	};
 
 	dsu_pmu: dsu-pmu {
 		compatible = "arm,dsu-pmu";
-		status = "disabled";
+		status = "okay";
 		interrupt-parent = <&gic>;
 		interrupts = <GIC_SPI 110 IRQ_TYPE_LEVEL_HIGH>;
 		cpus = <&cpu_0>, <&cpu_1>, <&cpu_2>, <&cpu_3>,
@@ -649,7 +649,7 @@
 
 	dsu_ctrl: dsu-ctrl {
 		compatible = "horizon,dsu-ctrl";
-		status = "disabled";
+		status = "okay";
 	};
 
 	psci {
