--- a/arch/arm64/configs/hobot_x5_soc_nand_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_nand_defconfig
@@ -192,6 +192,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_X5_ETH=y
+CONFIG_JPLUS_ETH=y
 CONFIG_REALTEK_PHY=y
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_KEYBOARD_GPIO=y
