arm64: dts: hobot: [X5-552] Add hobot-pps node
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: If6aaa0a86566f21734af812e2438d4da0a5c677d

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -4131,4 +4131,12 @@
 		compatible = "hobot-snd0";
 		status = "disabled";
 	};
+
+	hobot_pps: hobot_pps {
+		//pinctrl-names = "default";
+		//pinctrl-0 = <&gps_pps_func>;
+		compatible = "hobot-pps";
+		status = "disabled";
+		false_trigger_detect;
+	};
 };
