--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -236,6 +236,7 @@ CONFIG_SPI_DW_DMA=y
 CONFIG_SPI_DW_MMIO=y
 CONFIG_SPI_SPIDEV=m
 CONFIG_SPI_SLAVE=y
+CONFIG_PPS_CLIENT_HOBOT_PPS=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_HORIZON=y
 CONFIG_GPIOLIB=y
