pps: feat [X5-552] Support hobot-pps driver
Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: I669f30b55330cde0455d25c58e35f180e648729d

--- a/drivers/pps/clients/Kconfig
+++ b/drivers/pps/clients/Kconfig
@@ -35,3 +35,6 @@ config PPS_CLIENT_GPIO
 	  GPIO. To be useful you must also register a platform device
 	  specifying the GPIO pin and other options, usually in your board
 	  setup.
+
+config PPS_CLIENT_HOBOT_PPS
+	tristate "Hobot pps"
