net: horizon: feat [X5-59] Bingup horizon-tsn driver which is porting from hobot-eth-jplus. [1]
- device tree
- clock
- reset
...

Change-Id: I8f87bd13345d07afb05c9ea6f0881e7820d4247f
Signed-off-by: jianghe.xu <jianghe.xu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-v2.dts
@@ -712,6 +712,15 @@ the following ports need to be deleted*/
 
 /**display sub-system end**/
 
+&horizon_tsn {
+	status = "disabled";
+
+	phy-mode = "rgmii-id";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_enet &lsio_gpio0_31>;
+	phyreset-gpio = <&ls_gpio0_porta 31 GPIO_ACTIVE_HIGH>;
+};
+
 &hobot_tsn {
 	status = "disabled";
 
