dts:dfi_monitor: fix [X5-1127] Add top apb clock binding for dfi
Summary: top apb clock rate maybe changed according to boot src
Change-Id: I41c8fb61bacac756cd1f0f3e0726e4cd46c1bac5
Signed-off-by: ming.yu <ming.yu@hobot.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -695,6 +695,8 @@
 		dfi_monitor: dfi-monitor {
 			compatible = "horizon,x5-dfi";
 			status = "okay";
+			clocks = <&hpsclks X5_TOP_APB_CLK>;
+			clock-names = "apb-clk";
 			reg = <0x38200000 0x100>, /* dfi monitor */
 			      <0x38300000 0x1000>; /* ddr intr */
 			interval = <1>;	/* in seconds */
