soc: hobot: ddr_monitor: fix [X5-1136] Modify axi_monitor clks
set axi-monitor apb-clk by getting from dts to solve ddr bandwith error in
nand.

Signed-off-by: Hualun Dong <hualun.dong@horizon.cc>
Change-Id: I51ee68c36fa5d46d56b20eed9097702e11b82a13

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -727,7 +727,8 @@
 			reg = <0x38100000 0x10000>;
 			interrupt-parent = <&gic>;
 			interrupts = <GIC_SPI 10 IRQ_TYPE_LEVEL_HIGH>;
-
+			clocks = <&hpsclks X5_TOP_APB_CLK>;
+			clock-names = "apb-clk";
 			axi-num = <5>;
 			axi-names = "cpu", "bpu", "vin", "codec", "gpu";
 		};
