--- a/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
@@ -471,7 +471,9 @@ CONFIG_VIDEO_HOBOTC_VPU=m
 # CONFIG_DVB_SP2 is not set
 CONFIG_DRM=y
 CONFIG_DRM_PANEL_ATK_MD0550=y
+CONFIG_DRM_PANEL_JC_050HD134=m
 CONFIG_DRM_SII902X=y
+CONFIG_DRM_LONTIUM_LT8618=m
 CONFIG_VERISILICON_X5_SYSCON_BRIDGE=m
 CONFIG_DRM_VERISILICON=m
 CONFIG_VERISILICON_DC8000_NANO=y
