--- a/arch/arm64/boot/dts/hobot/x5-svb.dts
+++ b/arch/arm64/boot/dts/hobot/x5-svb.dts
@@ -244,6 +244,14 @@
 						<&bt1120_bridge_out>;
 				};
 			};
+
+			port@1 {
+				reg = <1>;
+
+				bt1120_bridge_out: endpoint {
+					remote-endpoint = <&hdmi_bridge_in>;
+				};
+			};
 		};
 	};
 };
