--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -236,6 +236,7 @@ CONFIG_SPI_DW_DMA=y
 CONFIG_SPI_DW_MMIO=y
 CONFIG_SPI_SPIDEV=m
 CONFIG_SPI_SLAVE=y
+CONFIG_PPS_CLIENT_HOBOT_PPS=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_HORIZON=y
 CONFIG_GPIOLIB=y
@@ -587,14 +588,13 @@ CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_DH=y
 CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_DES=y
-CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_CMAC=y
-CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_DRBG_HASH=y
 CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
+CONFIG_CRYPTO_DEV_TE=y
 CONFIG_CRC_ITU_T=y
 CONFIG_CRC7=y
 CONFIG_LIBCRC32C=m
@@ -615,7 +615,6 @@ CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_DEBUG_SPINLOCK=y
-CONFIG_DEBUG_MUTEXES=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
 # CONFIG_FTRACE is not set
 CONFIG_CORESIGHT=y
