staging: ion: feat [X5-1256] Add iommu sgtable support for drobot-lite-mmu
Signed-off-by: dinggao.pan <dinggao.pan@d-robotics.cc>
Change-Id: I8ffaf6fe72898d9a07089dc60651dae090d6f0c2

--- a/drivers/staging/android/ion/Makefile
+++ b/drivers/staging/android/ion/Makefile
@@ -13,6 +13,8 @@ obj-$(CONFIG_ION_HOBOT) += hobot_ion.o
 #hobot_ion_device-objs-$(CONFIG_ION) += ion_heap.o
 #hobot_ion_device-objs := $(hobot_ion_device-objs-y)
 
+ccflags-y += -I$(srctree)/drivers/iommu/
+
 ifeq ($(CONFIG_HOBOT_GCOV_BASE),y)
 GCOV_PROFILE := y
 endif
