rdkx5: dts: i2c: feat Enable i2c6, disable i2c7
Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dts
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dts
@@ -286,10 +286,10 @@
 	};
 };
 
-&i2c7 {
+&i2c6 {
 	status = "okay";
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_dsp_i2c7>;
+	pinctrl-0 = <&pinctrl_i2c6>;
 };
 
 &lpwm0 {
